# shootan

./: CMakeLists.txt  README.md  gameinfo.rc
.github/workflows/: cmake.yml
src/: Collisions.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  Multiplayer.cpp  main.cpp
src/client/: Game.cpp  Game.hpp  Level.cpp  Level.hpp  Multiplayer.cpp  Multiplayer.hpp  ResourceManager.cpp  ResourceManager.hpp  main.cpp
src/client/ui/: ErrorScene.cpp  ErrorScene.hpp  MenuScene.cpp  MenuScene.hpp  Scene.cpp  Scene.hpp
src/client/ui/elements/: Button.cpp  Button.hpp  Element.hpp  Image.cpp  Image.hpp  Textbox.cpp  Textbox.hpp
src/server/: Client.cpp  Client.hpp  Level.cpp  Level.hpp  Packet.hpp  Server.cpp  Server.hpp  main.cpp
src/shared/: Collisions.hpp  Timer.cpp  Timer.hpp  Types.hpp  Utils.hpp  Weapons.hpp  fix_win32_compatibility.h
